Revert PR #5 merge: restore Angular 21 / Java 25 / Spring Boot 4 stack
The PR #5 merge replaced main's tree with the full-project-review branch,
which was built on the older JHipster 7.9.3 stack. That downgraded main
from Angular 21.2.19 / TypeScript 5.9.3 / Java 25 / Spring Boot 4.0.6 to
Angular 14.2.12 / TypeScript 4.8.2 / Java 11 / Spring Boot 2.7.3.

This reverts the merge against its first parent, restoring main's tree
byte-for-byte to the upgraded stack. Also removed with it are the legacy
artefacts the old branch carried: the JHipster 7.9.3 generator metadata
(.jhipster/, jdl/), the Java 11 build scripts, the Jest config that the
upgraded stack replaced with Vitest, and CustomAccessDecisionManager,
whose Spring Security 6 replacement (ResourceSecuredAuthorizationManager)
already exists on main.

The branch's src/main/webapp/app/bpmn-editor migration is removed too: it
is Angular 14 code depending on six bpmn packages that the upgraded stack
does not declare, so it cannot typecheck against Angular 21 without a
port. That port is left as separate work.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014ikyUdH4ctb45Tr4sSQ5XN